--- a/qof/debian/rules
+++ b/qof/debian/rules
@@ -21,19 +21,22 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/simple-patchsys.mk
 
+# backends do not need ldconfig (anymore)
+DEB_DH_MAKESHLIBS_ARGS_libqof2-backend-qsf=-n
+DEB_DH_MAKESHLIBS_ARGS_libqof2-backend-sqlite=-n
+
 ifneq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
 # internal libraries need to be redirected to cross version
 DEB_MAKE_INVOKE+="QOF_LIBS=-L/usr/$(DEB_HOST_GNU_TYPE)/lib -lqof"
 # prevent CDBS overwriting CC
 DEB_CONFIGURE_SCRIPT_ENV =
 # Emdebian-specific customisation
-DEB_CONFIGURE_EXTRA_FLAGS += --disable-gdasql --disable-doxygen
+DEB_CONFIGURE_EXTRA_FLAGS += --disable-gdasql --disable-doxygen --disable-gdabackend
 # enable dpkg-shlibdeps to find the internal libraries.
 DEB_SHLIBDEPS_INCLUDE_libqof1 = ./debian/tmp/usr/lib/
 else
 DEB_MAKE_CHECK_TARGET = check
 endif
 
-configure/libqof1::
-	cp qof.symbols debian/libqof1.symbols
-
+build/libqof2::
+	cp qof.symbols debian/libqof2.symbols
