Remove deprecated code

--- a/qof/backend/file/Makefile.am
+++ b/qof/backend/file/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = .
 
-lib_LTLIBRARIES=libqof-backend-qsf.la
+pkglib_LTLIBRARIES=libqof-backend-qsf.la
 
 AM_CFLAGS = \
   ${warnFLAGS} \
@@ -17,7 +17,9 @@ libqof_backend_qsf_la_SOURCES = \
 
 libqof_backend_qsf_la_LDFLAGS = \
  -L${top_srcdir}/qof \
- -version-info $(LIBQOF_BACKEND_QSF_LIBRARY_VERSION)
+ -avoid-version
+
+# -version-info $(LIBQOF_BACKEND_QSF_LIBRARY_VERSION)
 
 libqof_backend_qsf_la_LIBADD = \
   ${QOF_LIBS} \
