update the docs and translation support for libqof2

--- a/qof/doc/Makefile.am
+++ b/qof/doc/Makefile.am
@@ -12,7 +12,7 @@ EXTRA_DIST = \
   doxygen.cfg.in \
   backend-api.txt \
   backend-errors.txt \
-  gnc-numeric-example.txt \
+  qofnumeric-example.txt \
   qofdatelocale.txt \
   map-plan.txt
 
