--- a/qof/debian/control
+++ b/qof/debian/control
@@ -3,8 +3,8 @@ Section: libs
 Priority: optional
 Maintainer: Debian QOF packaging team <pkg-qof-maintainers@lists.alioth.debian.org>
 Uploaders: Goedson Teixeira Paixao <goedson@debian.org>, Neil Williams <codehelp@debian.org>
-Build-Depends: debhelper (>= 5), cdbs, autotools-dev, libglib2.0-dev (>= 2.6.0),
- libxml2-dev (>= 2.5.10), libgda3-dev, gettext, libsqlite0-dev, dpkg-dev (>= 1.14)
+Build-Depends: autotools-dev, cdbs, debhelper (>= 5), dpkg-dev (>= 1.14), gettext,
+ libglib2.0-dev (>= 2.6.0), libxml2-dev (>= 2.5.10), libgda3-dev, libsqlite0-dev
 Build-Depends-Indep: doxygen
 Standards-Version: 3.7.3
 Homepage: http://qof.sourceforge.net/
@@ -30,8 +30,8 @@ Package: libqof-dev
 Priority: optional
 Section: libdevel
 Architecture: any
-Suggests: libqof-doc, libgda3-dev
-Depends: libqof2 (= ${binary:Version}), ${misc:Depends}, libglib2.0-dev
+Recommends: libqof-doc
+Depends: libgda3-dev, libglib2.0-dev, libqof2 (= ${binary:Version}), ${misc:Depends}
 Description: Query Object Framework - Development Headers
  A framework to allow the execution of SQL-type queries
  using collections of in-memory objects as 'tables'.
@@ -45,7 +45,7 @@ Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, libqof2 (= ${binary:Version}), ${misc:Depends}
 Recommends: xsltproc, xml-core
-Replaces: libqof1 (<= 0.7.0-2), libqof-backend-sqlite0, libqof-backend-qsf0
+Replaces: libqof-backend-qsf0
 Description: Query Object Framework - XML backend module
  QOF is a framework to allow the execution of SQL-type 
  queries using collections of in-memory objects as 'tables'.
@@ -62,7 +62,6 @@ Priority: optional
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, libqof2 (= ${binary:Version}), ${misc:Depends}
-Replaces: libqof-backend-sqlite0
 Description: Query Object Framework - SQLite backend module
  QOF is a framework to allow the execution of SQL-type 
  queries using collections of in-memory objects as 'tables'.
