--- a/qof/backend/file/Makefile.am
+++ b/qof/backend/file/Makefile.am
@@ -17,7 +17,7 @@ libqof_backend_qsf_la_SOURCES = \
 
 libqof_backend_qsf_la_LDFLAGS = \
  -L${top_srcdir}/qof \
- -avoid-version
+ -avoid-version -module
 
 # -version-info $(LIBQOF_BACKEND_QSF_LIBRARY_VERSION)
 
