--- a/qof/backend/gda/Makefile.am
+++ b/qof/backend/gda/Makefile.am
@@ -13,7 +13,7 @@ libqof_backend_gda_la_SOURCES = \
 
 libqof_backend_gda_la_LDFLAGS = \
  -L${top_srcdir}/qof \
- -avoid-version
+ -avoid-version -module
 
 #-version-info $(LIBQOF_BACKEND_QGDA_VERSION)
 
