--- a/qof/debian/control
+++ b/qof/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: optional
 Maintainer: Debian QOF packaging team <pkg-qof-maintainers@lists.alioth.debian.org>
 Uploaders: Goedson Teixeira Paixao <goedson@debian.org>, Neil Williams <codehelp@debian.org>
-Build-Depends: autotools-dev, cdbs, debhelper (>= 5), dpkg-dev (>= 1.14), gettext,
+Build-Depends: autotools-dev, cdbs, debhelper (>= 5), dpkg-dev (>= 1.14), gettext, pkg-config,
  libglib2.0-dev (>= 2.6.0), libxml2-dev (>= 2.5.10), libgda3-dev, libsqlite0-dev
 Build-Depends-Indep: doxygen
 Standards-Version: 3.7.3
