--- a/qof/backend/dwi/Makefile.am
+++ b/qof/backend/dwi/Makefile.am
@@ -1,28 +1,29 @@
-## Process this file with automake to produce Makefile.in
+pkglib_LTLIBRARIES = libqof_backend_dwi.la
 
-lib_LTLIBRARIES = libqof_backend_dwi.la
+libqof_backend_dwi_la_LDFLAGS= \
+ -L${top_srcdir}/qof \
+ -L${top_srcdir}/lib/libsql \
+ -avoid-version -module
 
-# libqof_backend_dwi_la_LDFLAGS= -version-info $(LIBQOF_LIBRARY_VERSION) -release $(VERSION) 
- 
-libqof_backend_dwi_la_LDFLAGS= -version-info $(LIBQOF_LIBRARY_VERSION)  
-
-# libqof_backend_dwi_la_LIBADD= libdwi.so
-LIBS = $(DWI_LIBS)
+libqof_backend_dwi_la_LIBADD= \
+  $(DWI_LIBS) \
+  ${QOF_LIBS} \
+  ${GLIB_LIBS}
 
 libqof_backend_dwi_la_SOURCES = \
-	dwi-backend.c                \
- 	qofmap.c 
-
+ dwi-backend.c \
+ qofmap.c 
 
 qof_backend_dwiincludedir = ${pkgincludedir}
 qof_backend_dwiinclude_HEADERS = \
-	qofmap.h
+ qofmap.h
 
-EXTRA_DIST =       \
-	README
+EXTRA_DIST = \
+ README
 
-AM_CFLAGS = -g     \
-	@CFLAGS@        \
-	@GLIB_CFLAGS@
-
-
+AM_CFLAGS =  \
+ -I.. -I../.. \
+ -I${top_srcdir}/qof/ \
+ -DLOCALE_DIR=\""$(datadir)/locale"\" \
+ ${GLIB_CFLAGS} \
+ ${DWI_CFLAGS}
