--- a/debian/trunk/debian/control
+++ b/debian/trunk/debian/control
@@ -3,7 +3,8 @@ Section: libs
 Priority: optional
 Maintainer: Neil Williams <codehelp@debian.org>
 Uploaders: Goedson Teixeira Paixao <goedson@debian.org>
-Build-Depends: autotools-dev, cdbs, debhelper (>= 5), dpkg-dev (>= 1.14), gettext, pkg-config,
+Build-Depends: autotools-dev, cdbs, debhelper (>= 5), dpkg-dev (>= 1.14),
+ gettext, pkg-config,
  libglib2.0-dev (>= 2.6.0), libxml2-dev (>= 2.5.10), libgda3-dev, libsqlite0-dev
 Build-Depends-Indep: doxygen
 Standards-Version: 3.7.3
@@ -109,9 +110,6 @@ Description: Query Object Framework - API Documentation
  A framework to allow the execution of SQL-type queries
  using collections of in-memory objects as tables.
  .
- This package provides the HTML content of the QOF
- homepage in
+ This package provides the documentation of the QOF
+ API produced using Doxygen in
  /usr/share/doc/libqof-doc/html/
- and the documentation of the QOF API produced using
- Doxygen in
- /usr/share/doc/libqof-doc/html/doxy/
