remove website from tarball

--- a/qof/Makefile.am
+++ b/qof/Makefile.am
@@ -8,17 +8,6 @@ pkgconfig_DATA = qof.pc
 EXTRA_DIST = config.rpath \
   po/POTFILES.skip \
   qof.pc.in \
-  qofsql.symbols \
-  website/gobj-example.c.html \
-  website/my-obj-example.c.html \
-  website/sflogosm.png \
-  website/sflogolg.png \
-  website/hacking.html \
-  website/qof.css \
-  website/why-qof.html \
-  website/favicon.png \
-  website/index.html \
-  website/start.html \
-  website/qof-logo.jpg
+  qofsql.symbols
 
 ACLOCAL_AMFLAGS = -I m4
