--- a/debian/trunk/debian/rules
+++ b/debian/trunk/debian/rules
@@ -22,6 +22,7 @@ include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/simple-patchsys.mk
 
 # backends do not need ldconfig (anymore)
+DEB_DH_MAKESHLIBS_ARGS=-Xlibqof2-backend
 DEB_DH_MAKESHLIBS_ARGS_libqof2-backend-qsf=-n
 DEB_DH_MAKESHLIBS_ARGS_libqof2-backend-sqlite=-n
 DEB_DH_MAKESHLIBS_ARGS_libqof2-backend-gda=-n
@@ -39,10 +40,15 @@ DEB_SHLIBDEPS_INCLUDE_libqof2 = ./debian/tmp/usr/lib/
 build/libqof2::
 	cp qof.symbols debian/libqof2.symbols
 	cat qofsql.symbols >> debian/libqof2.symbols
+
 else
+
 DEB_CONFIGURE_EXTRA_FLAGS += --enable-gdabackend
+ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
 DEB_MAKE_CHECK_TARGET = check
+endif
 build/libqof2::
 	cp qof.symbols debian/libqof2.symbols
+
 endif
 
