make the version id's into macros and remove the call to cut to get the SONAME.

--- a/qof/configure.ac
+++ b/qof/configure.ac
@@ -5,18 +5,29 @@ dnl # ******************************
 dnl # Initialise
 dnl # ******************************
 
-AC_INIT([qof],[0.8.0],[http://lists.sourceforge.net/lists/listinfo/qof-devel])
-
+AC_DEFUN([MAJOR], [0])
+AC_DEFUN([MINOR], [8])
+AC_DEFUN([MICRO], [0])
+AC_DEFUN([MY_VERSION], [MAJOR.MINOR.MICRO])
+AC_INIT([qof], [MY_VERSION],
+  [http://lists.sourceforge.net/lists/listinfo/qof-devel])
 AC_PREREQ(2.61)
 AC_GNU_SOURCE
-
-LIBQOF_LIBRARY_VERSION=2:0:0
-LIBQOFSQL_LIBRARY_VERSION=1:1:0
+AC_DEFUN([QOFCURRENT], [2])
+AC_DEFUN([QOFREVISION], [0])
+AC_DEFUN([QOFAGE], [0])
+AC_DEFUN([LIBQOFVERS], [QOFCURRENT:QOFREVISION:QOFAGE])
+LIBQOF_LIBRARY_VERSION=LIBQOFVERS
+AC_DEFUN([SQLCURRENT], [1])
+AC_DEFUN([SQLREVISION], [1])
+AC_DEFUN([SQLAGE], [0])
+AC_DEFUN([LIBSQLVERS], [SQLCURRENT:SQLREVISION:SQLAGE])
+LIBQOFSQL_LIBRARY_VERSION=LIBSQLVERS
 
 AC_SUBST(LIBQOF_LIBRARY_VERSION)
 AC_SUBST(LIBQOFSQL_LIBRARY_VERSION)
-SONAME=`echo $LIBQOF_LIBRARY_VERSION | cut -d: -f1`
-AC_SUBST(SONAME)
+SONAME=QOFCURRENT
+AC_SUBST([SONAME])
 
 AC_PREFIX_PROGRAM([/usr])
 VERSION=AC_PACKAGE_VERSION
