--- a/debian/trunk/debian/control
+++ b/debian/trunk/debian/control
@@ -43,6 +43,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, libqof2 (= ${binary:Version}), ${misc:Depends}
 Recommends: xsltproc, xml-core
 Replaces: libqof-backend-qsf0
+Provides: qof-backend-qsf
 Description: Query Object Framework - XML backend module
  QOF is a framework to allow the execution of SQL-type
  queries using collections of in-memory objects as 'tables'.
@@ -55,6 +56,7 @@ Description: Query Object Framework - XML backend module
 Package: libqof2-backend-sqlite
 Architecture: any
 Depends: ${shlibs:Depends}, libqof2 (= ${binary:Version}), ${misc:Depends}
+Provides: qof-backend-sqlite
 Description: Query Object Framework - SQLite backend module
  QOF is a framework to allow the execution of SQL-type
  queries using collections of in-memory objects as 'tables'.
@@ -67,6 +69,7 @@ Description: Query Object Framework - SQLite backend module
 Package: libqof2-backend-gda
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libqof2 (= ${binary:Version})
+Provides: qof-backend-gda
 Description: Query Object Framework - GDA backend module
  QOF is a framework to allow the execution of SQL-type
  queries using collections of in-memory objects as 'tables'.
